--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       type="image/svg+xml"
       href="./src/assets/ico_abti_circle.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/index.css" />
     <title>ABTI</title>
   </head>
   <body>
